CHATS_SIT/force-app/main/default/objects/sfsit_t_copay_delinqc_hist__x.object
<CustomObject>
    <description>sfsit$t_copay_delinqc_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_copay_delinqc_hist</externalName>
    <fields>
        <fullName>amt_delinqc_copay_enrlmt__c</fullName>
        <description>amt_delinqc_copay_enrlmt</description>
        <externalDeveloperName>amt_delinqc_copay_enrlmt</externalDeveloperName>
        <label>Parent Fee Delinquency Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_reason_resoln__c</fullName>
        <description>cde_reason_resoln</description>
        <externalDeveloperName>cde_reason_resoln</externalDeveloperName>
        <label>Resolution Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_month_delinqc__c</fullName>
        <description>dte_month_delinqc</description>
        <externalDeveloperName>dte_month_delinqc</externalDeveloperName>
        <label>Delinquency Month</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_resoln_delinqc__c</fullName>
        <description>dte_resoln_delinqc</description>
        <externalDeveloperName>dte_resoln_delinqc</externalDeveloperName>
        <label>Delinquency Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_delinqc__c</fullName>
        <description>dte_rptd_delinqc</description>
        <externalDeveloperName>dte_rptd_delinqc</externalDeveloperName>
        <label>Delinquency Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_year_delinqc__c</fullName>
        <description>dte_year_delinqc</description>
        <externalDeveloperName>dte_year_delinqc</externalDeveloperName>
        <label>Delinquency Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>80</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_copay_delinqc_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_copay_auth__c</fullName>
        <description>idn_copay_auth</description>
        <externalDeveloperName>idn_copay_auth</externalDeveloperName>
        <label>Identifier Auth Copay</label>
        <length>50</length>
        <referenceTo>batchsit_t_auth_copay__x</referenceTo>
        <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_copay_delinqc_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_copay_delinqc__c</fullName>
        <description>idn_copay_delinqc</description>
        <externalDeveloperName>idn_copay_delinqc</externalDeveloperName>
        <label>identifier Auth Delinquency</label>
        <length>50</length>
        <referenceTargetField>T_COPAY_DELINQC__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_COPAY_DELINQC__c</referenceTo>
        <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_copay_delinqc_hist1</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_copay_delinqc_hist__c</fullName>
        <description>idn_copay_delinqc_hist</description>
        <externalDeveloperName>idn_copay_delinqc_hist</externalDeveloperName>
        <label>identifier Auth Delinquency history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_enrlmt__c</fullName>
        <description>idn_enrlmt</description>
        <externalDeveloperName>idn_enrlmt</externalDeveloperName>
        <label>Authorization Parent Fee ID</label>
        <length>80</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_copay_delinqc_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_copay_enrlmt__c</fullName>
        <description>nbr_seq_copay_enrlmt</description>
        <externalDeveloperName>nbr_seq_copay_enrlmt</externalDeveloperName>
        <label>Number Sequence authorization delinqc</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_delinqc_copay_enrlmt__c</fullName>
        <description>nbr_seq_delinqc_copay_enrlmt</description>
        <externalDeveloperName>nbr_seq_delinqc_copay_enrlmt</externalDeveloperName>
        <label>Number Seq_Delinqc auth Enroll</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Parent Fee Delinquency History</label>
    <pluralLabel>Parent Fee Delinquency History</pluralLabel>
</CustomObject>